--- a/rest-nodejs/package.json
+++ b/rest-nodejs/package.json
@@ -13,16 +13,17 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "module",  
+  "type": "module",
   "dependencies": {
+    "cors": "^2.8.6",
     "dotenv": "^17.3.1",
     "express": "^5.2.1",
     "fastify": "^5.7.4",
+    "helmet": "^8.1.0",
     "pino": "^10.3.1",
     "pino-pretty": "^13.1.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
-  }  
+  }
 }
-
